--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ a{
 .midBanner,
 .pricing-table-container,
 .Testinomial{
-  width: 1440px;
+  /* width: 1440px; */
 }
 .midBanner {
   /* width: 1440px; */
@@ -72,7 +72,8 @@ a{
 
 .videoPop-Container-main{
   height: 100vh;
-  width: 1440px;
+  /* width: 1440px; */
+  width: 100%;
   position:fixed;
   background-color: #1d1d1db6;
   z-index: 100;
