--- a/src/components/Level 1/Top/top.css
+++ b/src/components/Level 1/Top/top.css
@@ -1,7 +1,7 @@
 .top-container {
   height: 560px;
   display: flex;
-  width: 1440px;
+  /* width: 1440px; */
   /* padding: 0 30px ; */
   justify-content: space-evenly;
   margin-top: 50px;
