--- a/src/components/SingleVIdeo/Requirement/requirement.css
+++ b/src/components/SingleVIdeo/Requirement/requirement.css
@@ -1,5 +1,5 @@
 .requirement-container {
-    /* width: 1441px; */
+    width: 1440px;
     height: 310px;
     display: grid;
     place-items: center;
