--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,13 @@
 
 
 }
+.App{
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 a{
   text-decoration: none;
 }
@@ -13,11 +19,17 @@ a{
 .HealthGuides,
 .midBanner,
 .pricing-table-container,
-.Testinomial{
+.Testinomial
+{
   /* width: 1440px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* margin: 0 1000px; */
 }
+
 .midBanner {
-  /* width: 1440px; */
+  width: 1440px;
   height: 640px;
   margin: 100px 0;
 }
@@ -70,29 +82,14 @@ a{
   margin: 50px 0px;
 }
 
-.videoPop-Container-main{
-  height: 100vh;
-  /* width: 1440px; */
-  width: 100%;
-  position:fixed;
-  background-color: #1d1d1db6;
-  z-index: 100;
-
-}
-.videoPopUp{
-  /* display: none; */
-  position: fixed;
-  width: 712px;
-  height: auto;
-  /* left: 219px; */
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  background: #1D1A1A;
-  border-radius: 20px;
-  z-index: 2;
-}
-
 .videoCard-link{
   color: black;
+}
+
+.singleVideo-Container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width:1440px;
 }
