--- a/src/components/Home/MIdBanner/midBanner.css
+++ b/src/components/Home/MIdBanner/midBanner.css
@@ -1,8 +1,10 @@
 .midBanner-container {
   height: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  width: 100%;
+  margin: 0 50px;
 }
 .midBanner-container-left {
   width: 495px;
