--- a/src/components/Home/SlideBox/SlideBox.css
+++ b/src/components/Home/SlideBox/SlideBox.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 1440px;
 }
 
 .slidebox-heading {
