--- a/src/components/Level 1/BuyBanner/buybanner.css
+++ b/src/components/Level 1/BuyBanner/buybanner.css
@@ -1,14 +1,20 @@
 .buyBanner-container {
-  /* width: 1440px; */
+  width: 100%;
   height: 125px;
   background: #004560;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  /* justify-content: space-around; */
   align-items: center;
 
-  gap: 130px;
+  /* gap: 130px; */
 }
-
+.buyBanner-container-content{
+  width: 1440px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 .buyBanner-container-left-top {
   color: #fff;
   font-size: 24px;
