--- a/src/components/SingleVIdeo/Content/content.css
+++ b/src/components/SingleVIdeo/Content/content.css
@@ -4,6 +4,7 @@
     place-items: center;
     padding: 0 0 0 130px;
     justify-content: start;
+    width: 1440px;
 }
 .content-container-content{
     width: 768px;
