--- a/src/components/SingleVIdeo/Top/top.css
+++ b/src/components/SingleVIdeo/Top/top.css
@@ -1,13 +1,16 @@
 .singleTop-container {
   height: 560px;
   display: flex;
-  padding: 0 132px ;
-  justify-content: space-between;
+  /* padding: 0 132px ; */
+  justify-content: space-around;
   margin-top: 50px;
+ width: 1440px;
+ padding: 0 200px;
 }
 
 .singleTop-container-left {
-  width: 45%;
+  /* width: 45%; */
+  width: 700px;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -79,10 +82,10 @@
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.04), 0px 4px 8px rgba(0, 0, 0, 0.06);
     border-radius: 20px;
     margin: 0 0 80px 0;
-    position: fixed;
+    /* position: fixed; */
     top: 150px;
     /* bottom: 20px; */
-    right: 124px;
+    /* right: 124px; */
 }
 
 .singleTop-container-right-video-box {
