--- a/src/components/VideoPlayer/videoplayer.css
+++ b/src/components/VideoPlayer/videoplayer.css
@@ -1,3 +1,8 @@
+
+.videoplayer-container{
+    width: 1440px;
+}
+
 .videoplayer-container-content-Player{
     /* width: 1440px; */
     height: auto;
