--- a/src/components/Upgrade/upgrade.css
+++ b/src/components/Upgrade/upgrade.css
@@ -1,6 +1,10 @@
 .upgrade-container{
 height: 634px;
 margin: 30px 0 0 0;
+width: 1440px;
+display: flex;
+/* justify-content: center; */
+/* align-items: center; */
 }
 
 .upgrade-container-content{
