--- a/src/components/SingleVIdeo/Content/content.css
+++ b/src/components/SingleVIdeo/Content/content.css
@@ -4,10 +4,10 @@
     place-items: center;
     padding: 0 0 0 130px;
     justify-content: start;
-    width: 1440px;
+    /* width: 1440px; */
 }
 .content-container-content{
-    width: 768px;
+    width: 835px;
     height: 317px;
     /* border-radius: 40px; */
     /* border: 1px solid rgba(0, 0, 0, 0.1); */
