--- a/src/components/SingleVIdeo/Desc/desc.css
+++ b/src/components/SingleVIdeo/Desc/desc.css
@@ -5,6 +5,7 @@
     place-items: center;
     padding: 0 0 0 130px;
     justify-content: start;
+    margin: 0 0 30px 0;
   }
   .desc-container-content {
     width: 768px;
