--- a/src/components/SingleVIdeo/SingleVideo.css
+++ b/src/components/SingleVIdeo/SingleVideo.css
@@ -72,7 +72,7 @@
     top: 15px;
     /* left: 990px; */
     width: 1440px;
-    margin: 40px 0 0 0;
+    margin: 40px 0 30px 0;
 }
 
 .singleTop-container-right {
