--- a/src/components/Level 1/BuyBanner/buybanner.css
+++ b/src/components/Level 1/BuyBanner/buybanner.css
@@ -8,6 +8,7 @@
   align-items: center;
 position: sticky;
 bottom: 0;
+transition: all .5s linear;
   /* gap: 130px; */
 }
 .buyBanner-container-content{
