--- a/src/components/Home/Landing/landing.css
+++ b/src/components/Home/Landing/landing.css
@@ -4,45 +4,60 @@
 }
 
 .landing-container {
-  height: 100vh;
+  height: 700px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #000000;
+  position: relative;
+}
+.landing-container-video {
   width: 1440px;
+  height: 100%;
+  /* position: absolute; */
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #00000067;
 }
-
+.landing-container-video video{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 .landing-container-content {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
   width: 525px;
+  position: absolute;
 }
-.landing-container-content-title{
-    color: #FFF;
-    font-family: Inter;
-    font-size: 64px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+.landing-container-content-title {
+  color: #fff;
+  font-family: Inter;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
-.landing-container-content-tagline{
-    color: rgba(255, 255, 255, 0.80);
-    font-family: Inter;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+.landing-container-content-tagline {
+  color: rgba(255, 255, 255, 0.8);
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
-.landing-container-content-info{
-    /* width: 499px; */
-    color: rgba(255, 255, 255, 0.70);
-    font-family: Inter;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-align: center;
+.landing-container-content-info {
+  /* width: 499px; */
+  color: rgba(255, 255, 255, 0.7);
+  font-family: Inter;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-align: center;
 }
